[package]
name = "axum-webtools-macros"
version = "0.1.15"
edition = "2021"
license = "Apache-2.0"
authors = ["Jonatan Lemes"]
description = "General purpose macros for axum web framework."
repository = "https://github.com/jonatansalemes/axum-webtools.git"
homepage = "https://github.com/jonatansalemes/axum-webtools.git"
documentation = "https://docs.rs/axum-webtools-macros"
readme = "../README.md"
keywords = ["axum", "web", "test", "dotenv"]
categories = ["web-programming"]

[dependencies]
axum-webtools = "0.1.15"
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.6" }
quote = { version = "1.0.38" }
syn = { version = "2.0.98" }
tokio = { version = "1.43.0", features = ["full"] }

[lib]
proc-macro = true
