[package]
name = "axum-webtools-macros"
version = "0.1.29"
edition = "2021"
license = "Apache-2.0"
authors = ["Jonatan Lemes"]
description = "General purpose macros for axum web framework."
repository = "https://github.com/jonatansalemes/axum-webtools.git"
homepage = "https://github.com/jonatansalemes/axum-webtools.git"
documentation = "https://docs.rs/axum-webtools-macros"
readme = "../README.md"
keywords = ["axum", "web", "test", "dotenv"]
categories = ["web-programming"]

[dependencies]
quote = { version = "1.0.38" }
syn = { version = "2.0.98", features = ["full"] }
axum-webtools = "0.1.29"

[lib]
proc-macro = true
