[package]
name = "axum-webtools-pgsql-migrate"
version = "0.1.41"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Jonatan Lemes"]
description = "General purpose migrate sql for axum web framework."
repository = "https://github.com/jonatansalemes/axum-webtools.git"
homepage = "https://github.com/jonatansalemes/axum-webtools.git"
documentation = "https://docs.rs/axum-webtools"
readme = "../README.md"
keywords = ["axum", "pgsql", "sqlx", "tx", "migrate"]
categories = ["web-programming"]

[[bin]]
name = "pgsql-migrate"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
sha2 = { version = "0.10.9" }
urlencoding = { version = "2.1" }

[dev-dependencies]
rand = { version = "0.10.0" }

