[package]
name = "axum-webtools"
version = "0.1.47"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Jonatan Lemes"]
description = "General purpose tools for axum web framework."
repository = "https://github.com/jonatansalemes/axum-webtools.git"
homepage = "https://github.com/jonatansalemes/axum-webtools.git"
documentation = "https://docs.rs/axum-webtools"
readme = "../README.md"
keywords = ["axum", "dotenv", "sqlx", "tx", "jwt"]
categories = ["web-programming"]

[dependencies]
argon2 = { version = "0.6.0-rc.8", features = ["getrandom"] }
axum = { version = "0.8.8" }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = { version = "0.4.44", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["display"] }
futures-util = { version = "0.3.32" }
http-body-util = { version = "0.1.3" }
jsonwebtoken = { version = "10.3.0" ,default-features = false, features = ["aws_lc_rs"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
sqlx = { version = "0.8.6" }
tower = { version = "0.5.3" }
thiserror = { version = "2.0.18" }
validator = { version = "0.20.0", features = ["derive"] }
getrandom = { version = "0.4.2" }

[dev-dependencies]
fake = { version = "5.1.0" }
tokio = { version = "1.51.0", features = ["full"] }
sqlx = { version = "0.8.6" , features = ["postgres"]}

[features]
mock_jwt = []

