[package]
name = "axum-webtools"
version = "0.1.52"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Jonatan Lemes"]
description = "General purpose tools for axum web framework."
repository = "https://github.com/jonatansalemes/axum-webtools.git"
homepage = "https://github.com/jonatansalemes/axum-webtools.git"
documentation = "https://docs.rs/axum-webtools"
readme = "../README.md"
keywords = ["axum", "dotenv", "sqlx", "tx", "jwt"]
categories = ["web-programming"]

[dependencies]
argon2 = { version = "0.6.0-rc.8", features = ["getrandom"] }
axum = { version = "0.8" }
axum-extra = { version = "0.12", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2.1", features = ["display"] }
futures-util = { version = "0.3" }
http-body-util = { version = "0.1" }
jsonwebtoken = { version = "10.4" ,default-features = false, features = ["aws_lc_rs"]}
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.9" }
tower = { version = "0.5" }
thiserror = { version = "2.0" }
validator = { version = "0.20", features = ["derive"] }
getrandom = { version = "0.4" }

[dev-dependencies]
fake = { version = "5.1" }
tokio = { version = "1.52", features = ["full"] }
sqlx = { version = "0.9" , features = ["postgres"]}
env_logger = { version = "0.11" }

[features]
mock_jwt = []

